# fastapi_todoapp

fastAPI/: Dockerfile  docker-compose.yaml  pyproject.toml
fastAPI/api/: __init__.py  db.py  main.py  migrate_db.py
fastAPI/api/cruds/: done.py  task.py
fastAPI/api/models/: task.py
fastAPI/api/routers/: done.py  task.py
fastAPI/api/schemas/: done.py  task.py
fastAPI/tests/: test_main.py
